# LPC54114

./: LPCXpresso54114_manifest_v3_2.xml  LPCXpresso54114_manifest_v3_3.xml  README.md  SW-Content-Register.txt
boards/lpcxpresso54114/demo_apps/hello_world/cm4/: board.c  hello_world.xml  readme.txt
boards/lpcxpresso54114/demo_apps/hello_world_virtual_com/cm4/: hello_world.c  hello_world_virtual_com.xml  pin_mux.c  readme.txt
boards/lpcxpresso54114/demo_apps/led_blinky/cm4/: led_blinky.c  led_blinky.xml  pin_mux.c  pin_mux.h  readme.txt
boards/lpcxpresso54114/demo_apps/power_manager_lpc/cm4/: pin_mux.c  pin_mux.h  power_manager_lpc.c  power_manager_lpc.xml  readme.txt
boards/lpcxpresso54114/demo_apps/shell/cm4/: pin_mux.c  pin_mux.h  readme.txt  shell.c  shell.xml
boards/lpcxpresso54114/demo_apps/utick_wakeup/cm4/: pin_mux.c  pin_mux.h  readme.txt  utick_wakeup.c  utick_wakeup.xml
boards/lpcxpresso54114/driver_examples/crc/cm4/: crc.c  crc.xml  readme.txt
boards/lpcxpresso54114/driver_examples/flashiap/cm4/: flashiap.c  flashiap.xml  readme.txt
boards/lpcxpresso54114/driver_examples/fmeas/cm4/: fmeas.c  fmeas.xml  readme.txt
boards/lpcxpresso54114/driver_examples/fmeas/cm4/armgcc/: CMakeLists.txt
boards/lpcxpresso54114/driver_examples/gint/cm4/: gint.c  gint.xml  pin_mux.c  readme.txt
boards/lpcxpresso54114/driver_examples/i2s/cm4/: music.h  pin_mux.c
boards/lpcxpresso54114/driver_examples/mailbox/interrupt/: mailbox_interrupt_core0.c  mailbox_interrupt_core1.c
boards/lpcxpresso54114/driver_examples/mailbox/mutex/: mailbox_mutex_core0.c  mailbox_mutex_core1.c
boards/lpcxpresso54114/driver_examples/mrt/cm4/: mrt.c  mrt_example.xml  pin_mux.h  readme.txt
boards/lpcxpresso54114/driver_examples/rtc/cm4/: readme.txt  rtc.c  rtc_example.xml
boards/lpcxpresso54114/driver_examples/wwdt/cm4/: pin_mux.c  readme.txt  wwdt.c  wwdt_example.xml
boards/lpcxpresso54114/multicore_examples/erpc_matrix_multiply_rpmsg/: erpc_config.h
boards/lpcxpresso54114/project_template/: clock_config.c  clock_config.h  pin_mux.c
docs/MCUXpresso_SDK_API_Reference_Manual_LPC5411x/: dir_01b9abb6b8325ec40007a67d8e1936af.html  dir_2a1dd0fbcd48f3a218ef69b90ad172e4.html  dir_2dc913e86069ff32f8a07d808f4d8e4f.html  dir_3803c7c40becdc1a8f991e020a425f6b.html  dir_3d87c2df58032c55a697acbe8461844d.html  dir_51c73ba289f0e8fe50ccaff542140dcf.html  dir_5b772dd4d456f495cb29becefd143ee2.html  dir_8072ca6cdeca8c705203cc0f896a3705.html  dir_83c4f67939b2e50b6dc50fe3fc259b2d.html  dir_8dc67e0c7929eb565e59e47dca9fc307.html  dir_97879f77cafaedc6c6b7c8e7e6bcf419.html  dir_a2da420fdde962bd10156eaa17d1670b.html  dir_a3e8f1feb8c30c12d24fc9c7995a15c1.html  dir_a55cd384a306e7afcec635b1f1090d87.html  dir_a9f7142d3928d78c4011b2f65adff297.html  dir_badbbf83d91d29388f57253b564ac300.html  dir_c52252b67ab65e0297f6a174229f7c7d.html  dir_c7e9d45afd61725c3e80b2f8c629533d.html  dir_cf11e332aca21ace01228f79bca67e28.html  dir_ea982a4a90bbf64c8a612131ad2f0fcb.html  dir_eb78a2695df30cd843f578001c009203.html  dir_f30abb5cc8638813aed7c6a92244f0bf.html  dir_fc96f42ac84918ecddda0cd8df2b2eae.html  dir_fe17369504b62620f9ab3f8b493368f8.html  drv_err.html  group__SWO.html  group__clock.html  group__crc.html  group__ctimer.html  group__ctimer.js  group__debugconsole.html  group__debugconsole.js  group__dma.html  group__dma.js  group__dmic.html  group__dmic.js  group__dmic__dma__driver.html  group__dmic__dma__driver.js  group__dmic__driver.html  group__dmic__driver.js  (+62 more)
docs/MCUXpresso_SDK_API_Reference_Manual_LPC5411x/search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  classes_5f.js  classes_61.js  classes_63.js  classes_64.js  classes_69.js  classes_73.js  enums_5f.js  enums_61.js  enums_63.js  enums_64.js  enums_69.js  enums_6f.js  enums_70.js  enums_73.js  functions_61.js  functions_63.js  functions_64.js  functions_65.js  (+37 more)
example/erpc_matrix/erpc_matrix_multiply_rpmsg_cm0plus/: CMakeLists.txt  LPC54114J256_cm0plus_flash.ld
example/erpc_matrix/erpc_matrix_multiply_rpmsg_cm0plus/board/: pin_mux.h
example/erpc_matrix/erpc_matrix_multiply_rpmsg_cm0plus/erpc/: erpc_error_handler.cpp  erpc_error_handler.h
example/erpc_matrix/erpc_matrix_multiply_rpmsg_cm0plus/rpmsg_lite/: rpmsg_lite.h
example/erpc_matrix/erpc_matrix_multiply_rpmsg_cm0plus/source/: main_core1.c  rpmsg_config.h
example/erpc_matrix/erpc_matrix_multiply_rpmsg_cm4/: CMakeLists.txt
example/erpc_matrix/erpc_matrix_multiply_rpmsg_cm4/board/: pin_mux.c
example/erpc_matrix/erpc_matrix_multiply_rpmsg_cm4/mcmgr/: mcmgr.h
example/erpc_matrix/erpc_matrix_multiply_rpmsg_cm4/source/: main_core0.c
example/hello_world/hello_world_cm0plus/: CMakeLists.txt
example/hello_world/hello_world_cm0plus/board/: pin_mux.h
example/hello_world/hello_world_cm4/: CMakeLists.txt
example/hello_world/hello_world_cm4/board/: pin_mux.c
example/hello_world/hello_world_cm4/mcmgr/: mcmgr_internal_core_api.h
example/hello_world/hello_world_cm4/mcmgr/doc/: index.html
example/multicore_manager/multicore_manager_cm0plus/: CMakeLists.txt
example/multicore_manager/multicore_manager_cm0plus/board/: pin_mux.h
example/multicore_manager/multicore_manager_cm4/: CMakeLists.txt
example/multicore_manager/multicore_manager_cm4/board/: pin_mux.c  pin_mux.h
example/multicore_manager/multicore_manager_cm4/mcmgr/: mcmgr_internal_core_api_lpc54114.c
example/rpmsg_lite_pingpong/rpmsg_lite_pingpong_cm0plus/: CMakeLists.txt
example/rpmsg_lite_pingpong/rpmsg_lite_pingpong_cm0plus/board/: pin_mux.c
example/rpmsg_lite_pingpong/rpmsg_lite_pingpong_cm0plus/mcmgr/: mcmgr.c
example/rpmsg_lite_pingpong/rpmsg_lite_pingpong_cm4/: CMakeLists.txt
example/rpmsg_lite_pingpong/rpmsg_lite_pingpong_cm4/board/: pin_mux.c
example/rpmsg_lite_pingpong/rpmsg_lite_pingpong_cm4/source/: main_master.c  rpmsg_config.h
middleware/multicore/rpmsg_lite/doc/: navtreeindex0.js
(+495 files in other folders)
